--- a/src/Feature/Validator/code/SXV.Feature.Validator.csproj
+++ b/src/Feature/Validator/code/SXV.Feature.Validator.csproj
@@ -181,6 +181,7 @@
   <ItemGroup>
     <Content Include="App_Config\Include\Feature\SXV.Feature.Validator.config" />
     <Content Include="App_Config\Include\Feature\SXV.Feature.Validator.Serialization.config" />
+    <Content Include="sitecore\shell\Applications\ExV\ExperienceValidator.aspx" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="web.config" />
     <None Include="web.Debug.config">
@@ -192,6 +193,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="sitecore\shell\Applications\ExV\ExperienceValidator.aspx.cs">
+      <DependentUpon>ExperienceValidator.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="sitecore\shell\Applications\ExV\ExperienceValidator.aspx.designer.cs">
+      <DependentUpon>ExperienceValidator.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Views\web.config" />
