--- a/src/Feature/Validator/code/SXV.Feature.Validator.csproj
+++ b/src/Feature/Validator/code/SXV.Feature.Validator.csproj
@@ -192,6 +192,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\ConfigurationModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="sitecore\shell\Applications\ExV\ExperienceValidator.aspx.cs">
       <DependentUpon>ExperienceValidator.aspx</DependentUpon>
@@ -207,8 +208,13 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
-    <Folder Include="Models\" />
     <Folder Include="Views\Validator\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Foundation\ConfigValidator\code\SXV.Foundation.ConfigValidator.csproj">
+      <Project>{6eb637d0-c9a3-4b40-927e-4e221ecb2343}</Project>
+      <Name>SXV.Foundation.ConfigValidator</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
