--- a/src/Feature/Validator/code/SXV.Feature.Validator.csproj
+++ b/src/Feature/Validator/code/SXV.Feature.Validator.csproj
@@ -193,6 +193,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\ConfigurationModel.cs" />
+    <Compile Include="Models\PersonalizationModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="sitecore\shell\Applications\ExV\ExperienceValidator.aspx.cs">
       <DependentUpon>ExperienceValidator.aspx</DependentUpon>
